tests/NormalTests/paczka1/fuzzy1/76691859.err
Error in line 27: ENK5m A497 32,0
Error in line 38: uy54rmnvP A49	 6	,2
